--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
+  <title>Personal Bio</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
@@ -16,7 +17,8 @@
 
   <h3>Projects</h3>
   <ul>
-  	<li><a href="../../../../1/Activities/07-Stu_ImageAndLinks/Unsolved/index.html">Pymaceuticals</a></li> 
+  	<li><a href="https://github.com/jjrx/matplotlib-hw/blob/master/Pymaceuticals/pymaceuticals_starter_MySolution.ipynb">Pymaceuticals</a></li> 
+    <li><a href="https://github.com/jjrx/twitteranalytics-hw/blob/master/hw.ipynb">New Source Sentiment Analysis on Twitter</a></li> 
   </ul>
 
   <h4>Connect with me:</h4>
